# mgimo-foreign-trade

./: .gitignore  .nojekyll  .quartoignore  README.md  _quarto.yml  analyze_parquet.R  index.html  project_architecture.md  project_organization.md  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  turkey_2025_processed.parquet  update-data.bat
.claude/: settings.local.json
R/: comtrade_code.R
data_analytics/: data_highlighting.Rmd  fizob_queries.R  functions_forecasting.R  functions_outlier_detection.R  ifo_construction.Rmd  ifo_weighting.Rmd  outliers_detection.Rmd  univariate_forecasting_models.Rmd
data_comparison/: comparison_cn.R  comparison_ind.R  compatison_tk.R  functions_comparison.R  summary.xlsx  wrangling_chn.R  wrangling_ind.R  wrangling_tur.R
data_interim_csv/: TR_TNVED4_2710_from_2024.xlsx
db_snapshots/: baseline.json
docs/: api_key_setup.md  china-collector-docs.md  china-country-code-fix.md  china-processor-docs.md  country-collector-guide.md  data_model.md  documentation_fizob.md  extract_country_tnved2_slice-docs.md  foreign-trade-one-pager.md  foreign-trade-roadmap.qmd  fts_csv_format.md  india-collector-docs.md  india-processor-docs.md  merge-comtrade-to-duckdb-docs.md  merge_processed_data-docs.md  orchestration.md  outlier_detection-docs.md  questionnaire.md  refactoring-plan-2026-07.md  refactoring-plan.md  site-publishing.md  testing-docs.md  turkey-collector-docs.md  turkey-processor-docs.md
hs_codes_json/: turkey_codes2025.json
lessons/: README.md  _quarto.yml  lesson_01_intro.html  lesson_01_intro.qmd  lesson_01_intro.quarto_ipynb  lesson_02_old_new_stats.html  lesson_02_old_new_stats.qmd  lesson_03_duckdb.html  lesson_03_duckdb.qmd  lesson_04_superset.html  lesson_04_superset.qmd  lesson_plan_4_sessions.md  search.json  styles.css
old_notebooks/: ChinaDownload.ipynb  IndiaDownload.ipynb  ProcessData.ipynb  TurkeyDownload.ipynb  Инструкция.docx
other/: foreign-trade-slide-2026.html  intro-presentation.qmd  (+5 more)
(+148 files in other folders)
