[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mgimo-foreign-trade"
version = "0.1.0"
description = "ETL-пайплайн внешнеторговой статистики: коллекторы, merge-слой, nowcast-ingest"
requires-python = ">=3.11"
# Зависимости окружения разработки перечислены в requirements.txt;
# сам пакет намеренно ничего не тянет при установке (CI ставит выборочно).

[tool.setuptools]
package-dir = {"" = "src"}
# Отдельные модули верхнего уровня из src/, которые импортируют тесты.
# Коллекторы (src/collectors/) станут пакетом в Итерации 3 плана рефакторинга.
py-modules = ["merge_processed_data", "load_fts_csv"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "pipelines*", "orchestration*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# src/collectors — до Итерации 3 процессоры импортируются как модули верхнего уровня
pythonpath = ["src", "src/collectors"]
